Adapted Library and Examples for Processing 2.0. This version is no longer compatible with older versions of Processing

--- a/ILI_Lithne/resources/build.properties
+++ b/ILI_Lithne/resources/build.properties
@@ -17,7 +17,7 @@
 # For windows the default path to your sketchbook would be
 # ${user.home}/My Documents/Processing (make adjustments below).
 
-sketchbook.location=/Users/rmagielse/Dropbox/[Programming]Processing/Code
+sketchbook.location=E:/My Documents/My Dropbox/Processing
 
 
 
@@ -29,7 +29,7 @@ sketchbook.location=/Users/rmagielse/Dropbox/[Programming]Processing/Code
 # For Windows the default path would be ${user.home}/workspace/libs (make 
 # adjustments below).
 
-#classpath.local.location=${user.home}/Documents/workspace/libs
+classpath.local.location=E:/My Documents/EclipseWorkspace/libs
 
 
 # For OSX users. 
@@ -38,7 +38,7 @@ sketchbook.location=/Users/rmagielse/Dropbox/[Programming]Processing/Code
 # Uncommenting the line below will overwrite the classpath.local.location from 
 # above.
 
-classpath.local.location=/Applications/Processing.app/Contents/Resources/Java/
+# classpath.local.location=/Applications/Processing.app/Contents/Resources/Java/
 
 
 # Add all jar files that are required for compiling your project to the local 
