--- a/ILI_Lithne/.classpath
+++ b/ILI_Lithne/.classpath
@@ -2,18 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/rmagielse/Documents/workspace/libs/core.jar"/>
-	<classpathentry kind="lib" path="/Users/rmagielse/Documents/workspace/libs/xbee.jar"/>
-	<classpathentry kind="lib" path="/Users/rmagielse/Documents/workspace/libs/log4j.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/rmagielse/Documents/workspace/libs"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/rmagielse/Documents/workspace/libs/serial.jar"/>
-	<classpathentry kind="lib" path="/Users/rmagielse/Documents/workspace/libs/RXTXcomm.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/rmagielse/Documents/workspace/libs"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/log4j.jar"/>
+	<classpathentry kind="lib" path="lib/RXTXcomm.jar"/>
+	<classpathentry kind="lib" path="lib/serial.jar"/>
+	<classpathentry kind="lib" path="lib/xbee.jar"/>
+	<classpathentry kind="lib" path="lib/core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
