--- a/ILI_Lithne/resources/build.properties
+++ b/ILI_Lithne/resources/build.properties
@@ -17,7 +17,7 @@
 # For windows the default path to your sketchbook would be
 # ${user.home}/My Documents/Processing (make adjustments below).
 
-sketchbook.location=E:/My Documents/My Dropbox/Processing
+sketchbook.location=D:/My Documents/Dropbox/Processing
 
 
 
@@ -29,7 +29,7 @@ sketchbook.location=E:/My Documents/My Dropbox/Processing
 # For Windows the default path would be ${user.home}/workspace/libs (make 
 # adjustments below).
 
-classpath.local.location=E:/My Documents/EclipseWorkspace/libs
+classpath.local.location=D:/My Documents/Dropbox/EclipseWorkspace/libs
 
 
 # For OSX users. 
@@ -45,7 +45,7 @@ classpath.local.location=E:/My Documents/EclipseWorkspace/libs
 # and project classpath, use a comma as delimiter. These jar files must be 
 # inside your classpath.local.location folder.
 
-classpath.local.include=core.jar,serial.jar,xbee.jar,log4j.jar,RXTXcomm.jar
+classpath.local.include=core.jar,xbee.jar,log4j.jar,RXTXcomm.jar
 
 
 # Add processing's libraries folder to the classpath.
